--- a/SourceCode/templates/busticket/drivercrud/driver.html
+++ b/SourceCode/templates/busticket/drivercrud/driver.html
@@ -25,7 +25,7 @@
      <td>{{ driver.date_of_birth }}</td>  
      <td>{{ driver.years_of_experience }}</td>  
      <td><p data-placement="top" data-toggle="tooltip" title="Edit"><a href="/driveredit/{{ driver.id }}" class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"  ><span class="glyphicon glyphicon-pencil"></span></a></p></td>
-     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/driverdelete/{{ driver.id }}" class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"  ><span class="glyphicon glyphicon-trash"></span></a></p></td>  
+     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/driverdelete/{{ driver.id }}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure you want to delete this?')" data-title="Delete" data-toggle="modal"  ><span class="glyphicon glyphicon-trash"></span></a></p></td>  
     </tr>  
    {% endfor %} 
    </tbody>
