--- a/SourceCode/templates/busticket/tripcrud/trip.html
+++ b/SourceCode/templates/busticket/tripcrud/trip.html
@@ -29,7 +29,7 @@
      <td>{{ trip.to_city }}</td>  
      <td>{{ trip.trip_date }}</td>  
      <td><p data-placement="top" data-toggle="tooltip" title="Edit"><a href="/tripedit/{{ trip.id }}" class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"  ><span class="glyphicon glyphicon-pencil"></span></a></p></td>
-     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/tripdelete/{{ trip.id }}" class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"  ><span class="glyphicon glyphicon-trash"></span></a></p></td>  
+     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/tripdelete/{{ trip.id }}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure you want to delete this?')" data-title="Delete" data-toggle="modal"  ><span class="glyphicon glyphicon-trash"></span></a></p></td>  
     </tr>  
    {% endfor %} 
    </tbody>
