--- a/SourceCode/templates/busticket/buscrud/bus.html
+++ b/SourceCode/templates/busticket/buscrud/bus.html
@@ -13,6 +13,7 @@
                 <th>Bus Plate</th>
                 <th>Bus Brand</th>
                 <th>Bus Status</th>
+                <th>Seat Count</th>
                 <th>Edit</th>
                 <th>Delete</th>
              </thead>
@@ -24,6 +25,7 @@
      <td>{{ bus.plate_text }}</td>  
      <td>{{ bus.brand_name }}</td>  
      <td>{{ bus.status }}</td>  
+     <td>{{ bus.seat_count }}</td>  
      <td><p data-placement="top" data-toggle="tooltip" title="Edit"><a href="/busedit/{{ bus.id }}" class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"  ><span class="glyphicon glyphicon-pencil"></span></a></p></td>
      <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/busdelete/{{ bus.id }}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure you want to delete this?')" data-title="Delete" data-toggle="modal"  ><span class="glyphicon glyphicon-trash"></span></a></p></td>  
     </tr>  
