--- a/SourceCode/templates/busticket/drivercrud/drivernew.html
+++ b/SourceCode/templates/busticket/drivercrud/drivernew.html
@@ -8,6 +8,7 @@
 
  <form method="POST" class="post-form" action="/drivernew/">  
    {% csrf_token %}  
+   {{ form.media }}
    {{ form.as_p }}
   <button type="submit" class="btn btn-primary">Submit</button>  
  </form>  
