--- a/SourceCode/templates/busticket/home.html
+++ b/SourceCode/templates/busticket/home.html
@@ -4,4 +4,5 @@
 
 {% block content %}
 <h1>Home Page</h1>
+<p>You are logged in as the buscompany user of {{ company_name }} Company</p>
 {% endblock %}
