Passenger user features are added

--- a/SourceCode/templates/busticket/base.html
+++ b/SourceCode/templates/busticket/base.html
@@ -60,6 +60,7 @@
           {% if user|has_group:'Passenger' %}
           <a href="/searchtrip">Search Trip</a>
           <a href="/reservation">Reservation</a>     
+          <a href="/ticket">Ticket</a>   
           {% endif %}
           <a href="/logout">Logout</a>
         {% endif %}
@@ -91,6 +92,12 @@
           $('#bootstrapdatatable').DataTable({     
             "aLengthMenu": [[3, 5, 10, 25, -1], [3, 5, 10, 25, "All"]],
               "iDisplayLength": 5
+            } 
+          );
+          $('#searchdatatable').DataTable({     
+            "aLengthMenu": [[3, 5, 10, 25, -1], [3, 5, 10, 25, "All"]],
+              "iDisplayLength": 5,
+              "searching": false, "paging": false, "info": false
             } 
           );
       } );
