Buy Ticket, Manage Reservation, Search Ticket and Sign Up use cases are done

--- a/SourceCode/templates/busticket/base.html
+++ b/SourceCode/templates/busticket/base.html
@@ -32,6 +32,47 @@
         margin-left: 160px;
         padding: 0px 10px;
       }
+
+      .outer-seat{
+        width: 20px;
+        height: 20px;
+        border-radius: 9px;
+        border: 3px solid #D8D8D8 ;
+        background: white;
+        position: relative;
+        margin: 4px;
+      }
+      .inner-seat{
+        width: 17px;
+        height: 17px;
+        border-radius: 4px;
+        top: 50%;
+        left: 50%;
+        margin: -9px 0px 0px -9px;
+        background: #D8D8D8 ;
+        position: absolute;
+      }
+
+      #div-inline{float: left; }
+
+      .clearBoth { clear:both; }
+
+      .selected-innerColor { 
+        background-color: #3366CC; 
+      }
+
+      .selected-outerColor {
+        border-color: #3366CC;
+      }
+
+      .finalized-innerColor { 
+        background-color: #00FF00; 
+      }
+
+      .finalized-outerColor {
+        border-color: #00FF00;
+      }
+
     </style>
 
     <meta charset="utf-8">
@@ -100,6 +141,8 @@
               "searching": false, "paging": false, "info": false
             } 
           );
+          
+
       } );
       </script>
 
