--- a/SourceCode/templates/busticket/reservationcrud/reservation.html
+++ b/SourceCode/templates/busticket/reservationcrud/reservation.html
@@ -8,7 +8,11 @@
         <div class="table-responsive">
   <table id="bootstrapdatatable" class="table table-striped table-bordered" width="100%">
             <thead>
-                <th>Trip</th>
+                <th>Ticket Id</th>
+                <th>Bus Company</th>
+                <th>From City</th>
+                <th>To City</th>
+                <th>Trip Date</th>
                 <th>Passenger</th>
                 <th>Seat No</th>
                 <th>Reservation Time</th>
@@ -18,7 +22,11 @@
    <tbody>
    {% for reservation in reservation_list %}  
     <tr>  
-     <td>{{ reservation.trip.trip_no }}</td>  
+     <td>{{ reservation.id }}</td>  
+     <td>{{ reservation.trip.bus_company }}</td>  
+     <td>{{ reservation.trip.from_city }}</td>  
+     <td>{{ reservation.trip.to_city }}</td>  
+     <td>{{ reservation.trip.trip_date }}</td>  
      <td>{{ reservation.passenger }}</td>  
      <td>{{ reservation.seat_no }}</td>  
      <td>{{ reservation.reservation_date }}</td>  
