--- a/SourceCode/templates/busticket/searchtrip.html
+++ b/SourceCode/templates/busticket/searchtrip.html
@@ -25,7 +25,7 @@
    <tbody>
    {% for trip in trip_list %}  
     <tr>  
-     <td>{{ trip.trip_no }}</td>  
+     <td>{{ trip.id }}</td>  
      <td>{{ trip.bus_company.name }}</td>  
      <td>{{ trip.bus }}</td>  
      <td>{{ trip.driver }}</td>  
