--- a/SourceCode/templates/registration/login.html
+++ b/SourceCode/templates/registration/login.html
@@ -12,4 +12,5 @@
         {{ form|crispy }}
         <p><button type="submit" class="btn btn-success">Login</button></p>
     </form>
+    <p class="text-center">Don't have an account? <a href="/register">Create an account</a>.</p>
 {% endblock %}
