--- a/SourceCode/templates/busticket/tripcrud/trip.html
+++ b/SourceCode/templates/busticket/tripcrud/trip.html
@@ -21,7 +21,7 @@
    <tbody>
    {% for trip in trip_list %}  
     <tr>  
-     <td>{{ trip.trip_no }}</td>  
+     <td>{{ trip.id }}</td>  
      <td>{{ trip.bus }}</td>  
      <td>{{ trip.driver }}</td>  
      <td>{{ trip.from_city }}</td>  
