UC12 is implemented

--- a/SourceCode/templates/busticket/base.html
+++ b/SourceCode/templates/busticket/base.html
@@ -101,6 +101,7 @@
             <a href="/bus">Bus</a>
             <a href="/driver">Driver</a>     
             <a href="/trip">Trip</a>
+            <a href="/searchreservationsandtickets">Reservation & Tickets</a>
           {% endif %}
           {% if user|has_group:'Passenger' %}
           <a href="/searchtrip">Search Trip</a>
